--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -46,18 +46,26 @@
 <view class="flex justify-center padding ">
     <!-- <view class="" style=""> -->
         <input placeholder="请输入消费金额"  placeholder-class="text-gray"
-        class="text-center text-bold text-xl text-red " type="digit"></input>
+        class="text-center text-bold text-xl text-red " type="digit" bindblur="inputConfirm"></input>
     <!-- </view> -->
 </view>
-<view style="padding: 0 120rpx;">
+<view style="padding: 0 120rpx;" wx:if="{{inputPrice > 0}}">
     <view style=" border-top: 1rpx solid #efaf30;">
         <view class="cu-list menu ">
+            <view class="flex justify-between padding-top ">
+                <view class="action">
+                    <text class="text-gray">支付价格：</text>
+                </view>
+                <view class="action text-red">                    
+                    <text class="text-price "></text>{{inputPrice}}元
+                </view>
+            </view>
             <view class="flex justify-between padding-top ">
                 <view class="action">
                     <text class="text-gray">先享优惠：</text>
                 </view>
                 <view class="action text-red">                    
-                    <text class="text-price "></text>5元
+                    <text class="text-price "></text>{{discountPrice}}元
                 </view>
             </view>
             <view class="flex justify-between padding-top ">
@@ -65,31 +73,15 @@
                     <text class="text-gray">实际支付：</text>
                 </view>
                 <view class="action text-red">                    
-                    <text class="text-price "></text>75.5元
+                    <text class="text-price "></text>{{payPrice}}元
                 </view>
             </view>
         </view>     
-        <!-- <view class="flex justify-between  " >
-            <view class="action">
-                <text class="">先享优惠奖励</text>
-            </view>
-            <view class="action">
-                <text class="">5元</text>
-            </view>
-        </view>
-        <view class="flex justify-between  " >
-            <view class="action">
-                <text class="">先享优惠奖励</text>
-            </view>
-            <view class="action">
-                <text class="">5元</text>
-            </view>
-        </view> -->
     </view>
 </view>
 
 <view class='flex align-center justify-around padding bg-white'>        
-    <button class="cu-btn round bg-yellow text-white block lg" catchtap='scanScore' >
+    <button class="cu-btn round bg-yellow text-white block lg" catchtap='toPay' >
     微信支付</button>
 
 </view>
