--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -2,7 +2,7 @@
 
 <image src="/images/bg.png" class="bg" mode="widthFix"></image>
 
-<view class="pg-space-xxl"></view>
+<view class="pg-space-xl"></view>
 
 <view class="flex flex-direction justify-center align-center">
     <image src="/images/icon/oct.png" style="width:72px" mode="widthFix"></image>
@@ -19,7 +19,7 @@
                 <text class="text-white">先享规则</text>                        
             </view>
             <view class="action">
-                <button class="cu-btn bg-white text-yellow round" catchtap="toRule" >查看</button>
+                <button class="cu-btn bg-white text-yellow round" catchtap="toDiscountCard" >查看</button>
             </view>
         </view>
         <view class="cu-list menu text-white">
@@ -61,11 +61,11 @@
                     <text class="text-price "></text>{{inputPrice}}元
                 </view>
             </view>
-            <view class="flex justify-between padding-top ">
+            <view class="flex justify-between padding-top text-green ">
                 <view class="action">
-                    <text class="text-gray">先享优惠：</text>
+                    <text class="">先享优惠：</text>
                 </view>
-                <view class="action text-red">                    
+                <view class="action ">                    
                     <text class="text-price "></text>{{discountPrice}}元
                 </view>
             </view>
@@ -73,7 +73,7 @@
                 <view class="action">
                     <text class="text-gray">实际支付：</text>
                 </view>
-                <view class="action text-red text-xxl text-bold">  
+                <view class="action text-red text-xl text-bold">  
                     <text class="text-price "></text>{{payPrice}}元
                 </view>
             </view>
@@ -82,7 +82,7 @@
 </view>
 
 <view class='flex align-center justify-around padding bg-white'>        
-    <button class="cu-btn round bg-green text-white block lg" catchtap='toPay' disabled='{{inputPrice<=0}}'>
+    <button class="cu-btn round bg-green text-white block lg" catchtap='toPay' wx:if='{{inputPrice>0}}'>
     微信支付</button>
 
 </view>
