--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -81,8 +81,10 @@
     </view>
 </view>
 
-<view class='flex align-center justify-around padding bg-white'>        
-    <button class="cu-btn round bg-green text-white block lg" catchtap='toPay' wx:if='{{inputPrice>0}}'>
-    微信支付</button>
-
+<view class='flex align-center justify-around padding bg-white' wx:if='{{inputPrice>0}}'>        
+    <button class="cu-btn round bg-green text-white block lg" catchtap='toPay' >微信支付</button>
 </view>
+<view class='flex align-center justify-center padding text-gray sign' wx:else>            
+     <button class="cu-btn round bg-gray text-gray  " catchtap='toSign'  >先享报名入口</button>
+</view>
+
