--- a/pages/store/store.wxss
+++ b/pages/store/store.wxss
@@ -34,3 +34,14 @@
     right: 0;
     z-index: -999;
 }
+
+
+
+.sign{
+    
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom:10px;
+}
