--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -11,10 +11,15 @@
         </view>
         <view class="">
             <view class="cu-list menu ">
-                <view url="" class="cu-item bg-white arrow "  style=" min-height: 140rpx;" wx:for="{{storeList}}" catchtap="toStore" data-store_uuid="{{item.storeUUID}}">
+                <view wx:if="{{item.isDiscountCard == false}}" 
+                    class="cu-item bg-white arrow " 
+                    style=" min-height: 140rpx;" 
+                    wx:for="{{storeList}}" catchtap="toStore" 
+                    data-shop_id="{{item.Id}}">
+
                     <view class="cu-avatar round lg margin-right-sm" style="background-image:url({{item.storeLogo}});"></view>
                     <view class="content">
-                        <view class="text-gray text-sm">{{item.storeName}}</view>
+                        <view class="text-gray text-sm">{{item.Name}}</view>
                         <view class="flex">
                             <text class="text-cut">
                             <text class="cuIcon-infofill text-yellow  margin-right-xs"></text>{{item.storeDes || ""}}</text>
