--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -30,20 +30,20 @@ starttime	:	2020-04-26 17:23
 endtime	:	2020-08-26 17:23 -->
 
     <view class="cu-card padding" wx:for="{{cardList}}">
-        <view class=" pg-radius  shadow shadow-warp bg-yellow">
+        <view class=" pg-radius  shadow shadow-warp {{ !isHasDiscountCard ? 'bg-gray text-black' : 'bg-yellow text-white' }} ">
             <view class="cu-bar  solid-bottom ">
                 <view class="action">
-                    <text class="cuIcon-title text-white "></text>                
-                    <text class="text-white">先享规则</text>                        
+                    <text class="cuIcon-title  "></text>                
+                    <text class="">先享规则</text>                        
                 </view>
                 <view class="action">
-                    <button class="cu-btn bg-white text-yellow round"  wx:if="{{!isHasDiscountCard}}"
+                    <button class="cu-btn bg-yellow text-white round"  wx:if="{{!isHasDiscountCard}}"
                         catchtap="getNewCard" data-discount_card_id="{{item.discount_card_id}}"
-                    >领取</button>
-                    <button class="cu-btn bg-white text-yellow round" catchtap="getCardDetail" wx:else>查看</button>
+                    >领取优惠</button>
+                    <button class="cu-btn bg-white text-yellow round" catchtap="getCardDetail" wx:else>查看进度</button>
                 </view>
             </view>
-            <view class="cu-list menu text-white">
+            <view class="cu-list menu ">
                 <view class="flex justify-between padding ">
                     <view class="action">
                         <text class="">奖励</text>
